Término da seção de Flexbox em CSS

--- a/estudos em css/estudos em css/css/style.css
+++ b/estudos em css/estudos em css/css/style.css
@@ -545,3 +545,192 @@ h3 {
     }
 }
 */
+
+/* FLEX */
+.flex{
+    display: flex;
+}
+
+/* FLEXCOLUMN */
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    background-color: #ccc;
+    margin-bottom: 20px;
+
+}
+
+/* WRAP */
+.wrap{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.box{
+    height: 40px;
+    width: 33%;
+    border: 1px solid red;
+}
+
+/* JUSTIFY CONTENT */
+.center, 
+.space-around, 
+.space-between, 
+.end{
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.center .box, 
+.space-around .box, 
+.space-between .box, 
+.end .box{
+    width: 50px;
+}
+
+.center{
+    justify-content: center;
+}
+
+.space-around{
+    justify-content: space-around;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+.end{
+    justify-content: flex-end;
+}
+
+/* ALIGN ITEMS */
+.align-center, 
+.flex-end, 
+.stretch{
+    display: flex;
+    margin-bottom: 20px;
+    height: 200px;
+    border: 1px solid blue;
+}
+
+.align-center .box, 
+.flex-end .box, 
+.stretch .box {
+    width: 50px;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.flex-end{
+    align-items: flex-end;
+}
+
+.stretch{
+    align-items: stretch;
+}
+
+.stretch .box{
+    height: auto; /* Para que a altura seja esticada, pois havia sido definida uma altura padrão lá em cima */
+}
+
+/* GAP */
+.gap{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: 1px solid green;
+    gap: 10px; /* Define o espaçamento entre os itens */
+}
+
+.gap .box{
+    width: 32%;
+}
+
+/* ORDER */
+.order{
+    display: flex;
+}
+
+#one{
+    order: 1;
+}
+
+#two{
+    order: 2;
+}
+
+#three{
+    order: 3;
+}
+
+/* GROW */
+.grow{
+    display: flex;
+}
+
+.grow .box{
+    flex: 1;
+}
+
+.grow .big{
+    flex: 2;
+}
+
+/* BASIS */
+.basis{
+    display: flex;
+}
+
+.basis .box{
+    flex-basis: 20px;
+}
+
+.basis .big{
+    flex-grow: 1;
+}
+
+/* SHRINK */
+.shrink{
+    display: flex;
+}
+
+.shrink .box{
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 250px;
+    width: auto;
+}
+
+.shrink .small{
+    flex-shrink: 2;
+}
+
+/* SHORTHAND */
+.shorthand {
+    display: flex;
+}
+
+.shorthand .box{
+    width: auto;
+    flex: 1 1 50px;
+}
+
+.shorthand .different{
+    flex: 3 1 400px;
+}
+
+/* ALIGN SELF */
+.auto-alignment{
+    height: 300px;
+    display: flex;
+    align-items: flex-end;
+    border: 1px solid purple;
+}
+
+.auto-alignment .different{
+    align-self: center;
+}
